# iot_messaging

./: .gitignore  CMakeLists.txt  README.md  attach_docker.sh  docker_attach.sh  run_docker.sh
client/: main.cpp
server/: CMakeLists.txt  main.cpp  zmq_messaging.cpp  zmq_messaging.h
src/: CMakeLists.txt  main.cpp  message_data.proto
src/client/: CMakeLists.txt  main.cpp
src/proto/: CMakeLists.txt  message_data.proto
src/server/: CMakeLists.txt  main.cpp  message.cpp  message.h  zmq_connect.cpp
